# microhcl

./: .gitignore  .travis.yml  README.md  appveyor.yml
include/hcl/: hcl.hpp
tests/: CMakeLists.txt  decoding_test.cpp  lexer_test.cpp  main.cpp  parser_test.cpp  value_test.cpp
tests/test-fixtures/decoding/: halfwidth_katakana.hcl  list_of_nested_object_lists.hcl  merge_objects.hcl  merge_objects2.hcl  multiline_literal_single_quoted.hcl  multiple_resources.hcl  top_level_keys.hcl
